--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Everything learnt from chapter 1-12</title>
     </head>
     <body>
-        
+
     </body>
 </html>
