added heading and first introduction

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <title>Everything learnt from chapter 1-12</title>
     </head>
     <body>
+        <h1>Making Progress And Winning</h1>
+        <p>I do not need an introduction anymore, i remain <strong>Winner</strong> and here is my report for today.</p>
+        <h3>What i learnt today</h3>
+        <img
 
     </body>
 </html>
