--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <h1>Making Progress And Winning</h1>
         <p>I do not need an introduction anymore, i remain <strong>Winner</strong> and here is my report for today.</p>
         <h3>What i learnt today</h3>
-        <img
+        <img src="image-folder/HTML-tags.png" width="15opx" height="150px">
+        <p></p>
 
     </body>
 </html>
