added the second paragraph and 2 list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <p>I do not need an introduction anymore, i remain <strong>Winner</strong> and here is my report for today.</p>
         <h3>What i learnt today</h3>
         <img src="image/download.jpeg" width="150px" height="150px">
-        <p></p>
+        <p>in other not to waste time, let us highlight</p>
+        <ul>
+            <li>This is one of them.</li>
+            <li>This is another.</li>
+        </ul>
 
     </body>
 </html>
