added a heading and listing

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
             <li>This is another.</li>
         </ul>
 
+        <h3>Name</h3>
+        <ul>
+            <li> One <strong>more</strong> listing</li>
+        </ul>
+        
+
     </body>
 </html>
