--- a/ExternalCSS/index.html
+++ b/ExternalCSS/index.html
@@ -12,5 +12,31 @@
 	</h1>
 	<p>This page will be built with a good looking UI and utilise External CSS to make it more presentable</p>
 	<img src="image/download.jpeg">
+
+	<!-- This div project starts here -->
+
+	<div class="parent">
+		<!-- first child here -->
+		<div class="first-child">
+			<img src="image/download.jpeg">
+			<p>Name:</p>
+			<h2>Winner Joseph</h2>
+		</div>
+
+		<!-- second child here -->
+		<div class="second-child">
+			<h2>All About Winner</h2>
+			<hr>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+	</div>
 </body>
 </html>
