Added some images and i finished the task i was given

--- a/google.html
+++ b/google.html
@@ -7,7 +7,7 @@
                 font-family: monospace;
                 font-size: 100px;
 
-                margin-left:500px;
+                /*margin-left:500px;*/
                 margin-top: 200px
         }
             #G{
